--- a/src/resources/static/css/styles.css
+++ b/src/resources/static/css/styles.css
@@ -1,3 +1,22 @@
-body {
-  background-color: brown;
+.board {
+  width: calc(64px * 8);
+  height: calc(64px * 8);
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.cell {
+  width: 64px;
+  height: 64px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.black {
+  background-color: black;
+}
+
+.white {
+  background-color: wheat;
 }
