fix init board bug, add html display current board, test code in Main.ts method

--- a/src/resources/static/css/styles.css
+++ b/src/resources/static/css/styles.css
@@ -14,9 +14,14 @@
 }
 
 .black {
-  background-color: black;
+  background-color: gray;
 }
 
 .white {
   background-color: wheat;
+}
+
+.cell svg {
+  width: 60px;
+  height: 60px;
 }
