add different color for white and black side

--- a/src/resources/static/css/styles.css
+++ b/src/resources/static/css/styles.css
@@ -25,3 +25,13 @@
   width: 60px;
   height: 60px;
 }
+
+.piece.white {
+  background-color: transparent;
+  fill:lavenderblush
+}
+
+.piece.black {
+  background-color: transparent;
+  fill:black
+}
