realise init method, but it needed to refactor

--- a/src/resources/static/css/styles.css
+++ b/src/resources/static/css/styles.css
@@ -26,7 +26,7 @@
   height: 60px;
 }
 
-.piece.white {
+/* .piece.white {
   background-color: transparent;
   fill:lavenderblush
 }
@@ -34,4 +34,4 @@
 .piece.black {
   background-color: transparent;
   fill:black
-}
+} */
