--- a/src/resources/static/css/styles.css
+++ b/src/resources/static/css/styles.css
@@ -26,6 +26,10 @@
   height: 60px;
 }
 
+.canmove {
+  box-shadow: 0 0 0 2px green; /* Зеленая обводка */
+}
+
 /* .piece.white {
   background-color: transparent;
   fill:lavenderblush
