add catpng view factory, png images for each color and piece

--- a/src/resources/static/css/styles.css
+++ b/src/resources/static/css/styles.css
@@ -1,13 +1,13 @@
 .board {
-  width: calc(64px * 8);
-  height: calc(64px * 8);
+  width: calc(100px * 8);
+  height: calc(100px * 8);
   display: flex;
   flex-wrap: wrap;
 }
 
 .cell {
-  width: 64px;
-  height: 64px;
+  width: 100px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,9 +21,9 @@
   background-color: wheat;
 }
 
-.cell svg {
-  width: 60px;
-  height: 60px;
+.cell * {
+  width: 100px;
+  height: 100px;
 }
 
 .canmove {
